Disconnect signals on destruction

Make sure to not call anything on m_svg when this is shutting down
Kirigami::PlatformTheme will lose its window at that point so will
emit colorschanged, which we shouldn't react to during destructor.

This fixes an assert

BUG:493921
BUG:495114